# th-em-rag

./: .env.template  .gitignore  README.md  architecture.md  pyproject.toml
src/rag/: agent.py  documents.py  main.py  tools.py
