[project]
name = "rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Foxicution",email = "foxicution@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-google-genai>=2.0",
    "langgraph>=0.3",
    "langchain-chroma>=0.2",
    "chromadb>=0.6",
    "python-dotenv>=1.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
